# prodigal-rs

./: Cargo.toml  README.md  build.rs  ccc_mapping.toml
src/: bitmap.rs  dprog.rs  ffi.rs  gene.rs  lib.rs  main.rs  metagenomic.rs  node.rs  output.rs  pipeline.rs  reader.rs  sequence.rs  training.rs  training_data.rs  types.rs
src/api/: convert.rs  encode.rs  meta_predictor.rs  mod.rs  predict.rs  training.rs  types.rs
tests/: api_test.rs  compare_outputs.rs  struct_sizes.rs
tools/: gen_training_data.c
