[package]
name = "prodigal"
version = "2.6.3"
edition = "2021"
description = "Prokaryotic gene prediction — Prodigal rewritten in Rust"
license = "GPL-3.0"

[lib]
name = "prodigal"
path = "src/lib.rs"

[[bin]]
name = "prodigal-rs"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
flate2 = "1"

[dev-dependencies]
tempfile = "3"
